# NeuralCity

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: autobuild-test.yml
engine/: Cargo.toml
engine/src/: activations.rs  autograd.rs  data.rs  lib.rs  loss.rs  nn.rs  optimizer.rs  persistence.rs  tensor.rs
src/: main.rs
src/engine/: chat-format.js  optim.js  rl.js  tokenizer.js  trainer-parallel.js  trainer.js  training-session-worker.js
src/main/: api-server.js  main.js  plugin-loader.js  preload.js  storage.js  training-manager.js
src/plugins/self-driving-car/: main.js  manifest.json  renderer.js
src/plugins/snake/: main.js  manifest.json  renderer.js
src/plugins/warehouse-robot/: main.js  manifest.json  renderer.js
src/renderer/: app.js  docs.js  index.html  styles.css
ui/: Cargo.toml
ui/src/: app.rs  corpus.rs  lib.rs  networks.rs  paths.rs  plot.rs  trainer.rs  vocab.rs
