[package]
name = "neuralcabin-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "egui-based interactive workbench for the NeuralCabin neural-network engine."

[lib]
name = "neuralcabin_ui"
path = "src/lib.rs"

[dependencies]
neuralcabin-engine = { path = "../engine" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
